# ros2_experiment

./: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  run.bash  run.bat  stop.bash
src/my_gripper_controller/: package.xml  setup.cfg  setup.py
src/my_gripper_controller/my_gripper_controller/: force_control_pid_node.py
src/my_robot_apps/: package.xml  setup.cfg  setup.py
src/my_robot_bringup/: CMakeLists.txt  package.xml
src/my_robot_description/: CMakeLists.txt  package.xml
src/my_robot_description/launch/: view_model.launch.py
src/my_robot_description/rviz/: view.rviz
src/my_robot_description/urdf/: robotiq.ros2_control.xacro  robotiq_ft300.urdf.xacro  robotiq_fts.ros2_control.xacro  robotiq_macro.urdf.xacro  ur_macro.xacro  ur_robotiq_ft.urdf.xacro
src/my_robot_moveit_config/: .setup_assistant  package.xml
src/my_robot_moveit_config/config/: joint_limits.yaml  ompl_planning.yaml  ur.srdf  ur.urdf.xacro
src/my_robot_simulation/: CMakeLists.txt  package.xml
src/ur_robotiq_description/: CMakeLists.txt  package.xml
src/ur_robotiq_description/launch/: gz_sim.launch.py  spawn_ur3e_camera.launch.py  spawn_ur3e_camera_gripper.launch.py  view_ur.launch.py  view_ur_gripper.launch.py
src/ur_robotiq_description/rviz/: view.rviz  view_gripper.rviz
src/ur_robotiq_description/scripts/: move.py
src/ur_robotiq_description/urdf/: a.urdf.xacro  robotiq_gripper.ros2_control.xacro  robotiq_gripper_macro.urdf.xacro  ur3e.ros2_control.xacro  ur3e_camera.urdf.xacro  ur3e_camera_gripper.urdf.xacro  ur3e_macro.xacro
(+15 files in other folders)
